examples/invalid/projects/bad_links_missing_data_plane/surface_shader.ns
use data FabricPlane;

mod shader SurfaceShader {
  fn profile() {
  }
}
